name:                RCAdventure
version:             0.1.0.0
synopsis:            Textbased adventure game based at the RC!
description:         Please see README.md
homepage:            https://github.com/anniecherk/RCAdventure#readme
license:             BSD3
license-file:        LICENSE
author:              Marielle Foster, Annie Cherkaev
maintainer:          annie.cherk@gmail.com
copyright:           Copyright: (c) 2016 AAC
category:            Games
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     GameMonad
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable RCA
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , RCAdventure
  default-language:    Haskell2010

test-suite RCAdventure-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , RCAdventure
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/anniecherk/RCAdventure
